--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Homepage</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="admissions.html">Admissions</a></li>
-                <li><a href="programs.html">Programs</a></li>
                 <li><a href="teachers.html">Teachers</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="vision.html">Vision & Mission</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
