--- a/teachers_testimonials.html
+++ b/teachers_testimonials.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to ABC Daycare</title>
-    <link rel="stylesheet" href="CSS\homestyle.css">
-    <link rel="stylesheet" href="./CSS/headStyle.css">
-    <link rel="stylesheet" href="./CSS/footStyle.css">
+    <title>Our Teachers and Testimonials</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Link to your CSS file for styling -->
+    <link rel="stylesheet" href="./CSS/headStyle.css">
+    <link rel="stylesheet" href="./CSS/footStyle.css">
+    <link rel="stylesheet" href="./CSS/teachStyle.css">
 </head>
 <body>
     <!-- Header Start -->
@@ -29,7 +28,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="teachers.html">Teachers</a></li>
+                    <li><a href="teachers_testimonials.html">Teachers</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -38,15 +37,44 @@
     </header>
     <!-- Header End -->
 
-    <main>
-        <section id="main">
-            <h1 id="header">Welcome to Veena's Pre nursery School</h1>
-            <!-- Add content for your homepage here -->
-        </section>
-    </main>
+    <div class="container">
+        <h2>Our Teachers</h2>
+        <div class="teacher">
+            <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg">
+            <div>
+                <h3>mr.akshay kumar singh</h3>
+                <p>He is a gentle boy. </p>
+            </div>
+        </div>
 
-     <!-- Footer starts -->
-     <footer>
+        <div class="teacher">
+            <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg">
+            <div>
+                <h3>prakash nayak</h3>
+                <p>he is a bengali lover....❤️</p>
+            </div>
+        </div>
+        <div class="teacher">
+            <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg">
+            <div>
+                <h3>Pawan kumar patel</h3>
+                <p>Most decent boy dating a girl named Shreya.</p>
+            </div>
+        </div>
+        <h2>commendations</h2>
+        <div class="testimonial">
+            <h3>Parent 1</h3>
+            <p>description parent 1.</p>
+        </div>
+
+        <div class="testimonial">
+            <h3>Parent 2</h3>
+            <p>Description parent 2.</p>
+        </div>
+    </div>
+
+    <!-- Footer starts -->
+    <footer>
         <div class="foot">
             <div class="socialLinks">
                 <p>Follow us On:</p>
