--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="teachers.html">Teachers</a></li>
+                    <li><a href="teachers_testimonials.html">Teachers</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
