--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
     <!-- Link to your CSS file for styling -->
 </head>
 <body>
+    <!-- Header Start -->
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="admissions.html">Admissions</a></li>
-                <li><a href="teachers.html">Teachers</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+        <div class="school">
+            <div class="head">
+                <div class="logo">
+                    <img src="./Resources/About/logo.png" alt="logo">
+                </div>
+                <div class="schoolName">
+                    <h1>Veena's Pre Nursery School</h1>
+                </div>
+            </div>
+            <nav class="navBar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="admissions.html">Admissions</a></li>
+                    <li><a href="teachers_testimonials.html">Teachers</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- Header End -->
 
