--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="images\image1.jpg" style="width:100%" height="500px">
+      <img src="img\image1.png" style="width:100%" height="500px">
       <div class="text">Caption Text</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="images\image2.jpg" style="width:100%"height="500px>
+      <img src="img\image2.png" style="width:100%"height="500px>
       <div class="text">Caption Two</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="images\image3.jpg" style="width:100%" height="500px>
+      <img src="img\image3.png" style="width:100%" height="500px>
       <div class="text">Caption Three</div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="images\image4.jpg" style="width:100%" height="500px>
+        <img src="img\image4.png" style="width:100%" height="500px>
         <div class="text">Caption four</div>
       </div>
       <div class="mySlides fade">
