On homepage map is embedded

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
     <!-- Photo section start -->
     <div class="photo">
-        <img src="./Resources/About/photo.jpg" alt="">
+        <img src="img\image3.png" alt="" height="500px">
     </div>
     <!-- Photo section end -->
     <!-- About section starts -->
