--- a/about.html
+++ b/about.html
@@ -25,8 +25,11 @@
                     <h1>Veena's Pre Nursery School</h1>
                 </div>
             </div>
+            <a id="menu-icon" class="menu-icon">
+                <i class="fa fa-bars"></i>
+            </a>
             <nav class="navBar">
-                <ul>
+                <ul class="nav-bar dropdown-menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="admissions.html">Admissions</a></li>
@@ -145,6 +148,7 @@
         </div>
     </footer>
     <!-- Footer ends -->
+    <script src="./js/responsive.js"></script>
 </body>
 
 </html>
