--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,11 @@
                     <h1>Veena's Pre Nursery School</h1>
                 </div>
             </div>
+            <a id="menu-icon" class="menu-icon">
+                <i class="fa fa-bars"></i>
+            </a>
             <nav class="navBar">
-                <ul>
+                <ul class="nav-bar dropdown-menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="admissions.html">Admissions</a></li>
@@ -38,7 +41,7 @@
         </div>
     </header>
     <!-- Header End -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="content">
             <div class="left-section">
                 <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="Contact Image">
@@ -66,6 +69,27 @@
                 </form>
             </div>
         </div>
+    </div> -->
+    <div class="topContainer">
+        <div class="leftContainer">
+            <h3>Contact Information</h3>
+            <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="Contact Image">
+            <div class="content">
+                <p>Contact: 123-456-7890</p>
+                <p>Email: example@email.com</p>
+                <p>Address: 123 Main Street, City, Country</p>
+            </div>
+        </div>
+        <div class="contactForm">
+            <h3>Contact Us</h3>
+            <form action="#" method="post">
+                <input type="text" id="studentname" name="studentname" placeholder="Student Name" required>
+                <input type="email" id="parentemail" name="parentemail" placeholder="Parent Email Id" required>
+                <input type="number" id="phone" name="phone" placeholder="Mobile Number" required>
+                <textarea id="message" name="message" rows="4" placeholder="Message" required></textarea>
+                <button class="submit">Contact Now</button>
+            </form>
+        </div>
     </div>
     <!-- Footer starts -->
     <footer>
@@ -90,6 +114,7 @@
         </div>
     </footer>
     <!-- Footer ends -->
+    <script src="./js/responsive.js"></script>
 </body>
 
 </html>
