--- a/index.html
+++ b/index.html
@@ -24,34 +24,32 @@
     <script src="js\imagesslider.js"></script>
 </head>
 
-<main id="main">
-   <!-- Slideshow container -->
-<div class="slideshow-container">
 <body>
-    <!-- Header Start -->
-    <header>
-        <div class="school">
-            <div class="head">
-                <div class="logo">
-                    <img src="./Resources/About/logo.png" alt="logo">
-                </div>
-                <div class="schoolName">
-                    <h1>Veena's Pre Nursery School</h1>
-                </div>
+  <!-- Header Start -->
+  <header>
+    <div class="school">
+        <div class="head">
+            <div class="logo">
+                <img src="./Resources/About/logo.png" alt="logo">
             </div>
-            <nav class="navBar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="teachers_testimonials.html">Teachers</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
+            <div class="schoolName">
+                <h1>Veena's Pre Nursery School</h1>
+            </div>
         </div>
-    </header>
-    <!-- Header End -->
+        <nav class="navBar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="admissions.html">Admissions</a></li>
+                <li><a href="teachers.html">Teachers</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<!-- Header End -->
+
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
