--- a/teachers_testimonials.html
+++ b/teachers_testimonials.html
@@ -40,42 +40,82 @@
     </header>
     <!-- Header End -->
 
-    <div class="container">
-        <h2>Our Teachers</h2>
-        <div class="teacher">
-            <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg">
-            <div>
-                <h3>mr.akshay kumar singh</h3>
-                <p>He is a gentle boy. </p>
-            </div>
+    <div class="content">
+        <div class="left-section">
+            <img src="./Resources/Testimonial/ann.jpeg" alt="Image">
         </div>
-
-        <div class="teacher">
-            <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg">
-            <div>
-                <h3>prakash nayak</h3>
-                <p>he is a bengali lover....❤️</p>
-            </div>
-        </div>
-        <div class="teacher">
-            <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg">
-            <div>
-                <h3>Pawan kumar patel</h3>
-                <p>Most decent boy dating a girl named Shreya.</p>
-            </div>
-        </div>
-        <h2>commendations</h2>
-        <div class="testimonial">
-            <h3>Parent 1</h3>
-            <p>description parent 1.</p>
-        </div>
-
-        <div class="testimonial">
-            <h3>Parent 2</h3>
-            <p>Description parent 2.</p>
+        <div class="right-section">
+            <p>"A teacher affects eternity; they can never tell where their influence stops."</p>
+            
         </div>
     </div>
-
+    <main>
+        <div class="container">
+            <h2>Our Teachers</h2>
+            <div class="teachers-list">
+                <div class="teacher-info">
+                    <div class="teacher">
+                        <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                        <div>
+                            <h3>Mr. A</h3>
+                            <p>About and description.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="teacher-info">
+                    <div class="teacher">
+                        <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                        <div>
+                            <h3>Mr. A</h3>
+                            <p>About and description.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="teacher-info">
+                    <div class="teacher">
+                        <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                        <div>
+                            <h3>Mr. A</h3>
+                            <p>About and description.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="teacher-info">
+                    <div class="teacher">
+                        <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                        <div>
+                            <h3>Mr. B</h3>
+                            <p>About and description.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2>Teachers Reviews</h2>
+            <div class="reviews">
+                <div class="review">
+                    <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                    <div>
+                        <h3>Review 1</h3>
+                        <p>Description.</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                    <div>
+                        <h3>Review 2</h3>
+                        <p>Description.</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <img src="./Resources/Testimonial/WhatsApp Image 2023-09-08 at 9.04.04 PM.jpeg" alt="Teacher Image">
+                    <div>
+                        <h3>Review 3</h3>
+                        <p>Description.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- Footer starts -->
     <footer>
         <div class="foot">
