--- a/gallery.html
+++ b/gallery.html
@@ -43,32 +43,41 @@
 </header>
 <!-- Header End -->
 
-  <main>
-    <div class="box">
-      <a href="travel.jpg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 1"></a>
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 2">
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 3">
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 4">
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 5">
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 6">
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 7">
-    </div>
-    <div class="box">
-      <img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 8">
-    </div>
-  </main>
+<h2>Photo Gallery</h2>
+<section class="events">
+  <h3 class="event-title">Events</h3>
+  <!-- <h3 class="additional">The best way to predict the future is to create it</h3> -->
+  <ul class="event-list">
+    <li onclick="showImagesForEvent('annual-function')">Annual Function</li>
+    <li onclick="showImagesForEvent('sports-day')">Sports Day</li>
+    <li onclick="showImagesForEvent('annual-function')">Annual Function</li>
+    <li onclick="showImagesForEvent('sports-day')">Sports Day</li>
+    <li onclick="showImagesForEvent('annual-function')">Annual Function</li>
+    <li onclick="showImagesForEvent('sports-day')">Sports Day</li>
+  </ul>
+</section>
+</header>
+
+<main>
+<div class="box" data-event="annual-function">
+  <a href="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 1"></a>
+</div>
+<div class="box" data-event="annual-function">
+  <a href="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 1"></a>
+</div>
+<div class="box" data-event="annual-function">
+  <a href="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 1"></a>
+</div>
+<div class="box" data-event="annual-function">
+  <a href="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 1"></a>
+</div>
+<div class="box" data-event="annual-function">
+  <a href="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 1"></a>
+</div>
+<div class="box" data-event="sports-day">
+   <a href="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg"><img src="./Resources/Gallery/WhatsApp Image 2023-09-08 at 9.04.05 PM.jpeg" alt="Travel Image 2"></a>
+</div>
+</main>
   <!-- Footer starts -->
   <footer>
     <div class="foot">
@@ -93,6 +102,7 @@
   </footer>
   <!-- Footer ends -->
   <script src="./js/responsive.js"></script>
+  <script src="./js/gallery.js"></script>
 </body>
 
 </html>
